set up add new user function for registration form

--- a/templates/register_form.html
+++ b/templates/register_form.html
@@ -6,7 +6,7 @@
 <form method="POST">
     Enter your email:
     <br>
-    <input type="text" name="email"><br>s
+    <input type="text" name="email"><br>
     <br>
     Enter a password:
     <br>
